--- a/less/overrides.less
+++ b/less/overrides.less
@@ -352,6 +352,7 @@ table.sticky-header {
 a.tabledrag-handle .handle {
   height: auto;
   width: auto;
+  padding: 0.42em 0.7em;
 }
 
 // Error containers.
